--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@ body {
 
 .container {
     padding: 100px;
-    height: 100vh;
+    height: 10vh;
     display: flex;
     justify-content: left;
     align-items: center;
@@ -31,4 +31,21 @@ body {
     50% {background-color: transparent;}
     99% {background-color: transparent;}
     100% {background-color: black;}
+}
+
+.tree {
+    padding: 10px;
+    border-radius: 1000px;
+    margin-top: 60px;
+    width: 100%;
+    max-width: 500px;
+    height: auto;
+    
+}
+
+.treediv {
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
